 * #1258: Fix a "codec can't decode byte" error when running commands that output multi-byte unicode
   characters.
 * #1260: Fix for SSH warnings from Borg showing up as JSON logs even without the "--log-json" flag.
 * #1252: Work around Borg returning a warning exit code when a repository/archive check fails. Now,
   borgmatic interprets such failures as errors.

2.1.1
 * #1241: For the "recreate" action, actually pass the "--dry-run" flag through to Borg instead of
   just skipping the Borg call.
 * #1242: Fix a regression in which the "spot" check hung while collecting archive contents.
 * #1244: When the "unsafe_skip_path_validation_before_create" option is enabled, don't log a
   warning about it.
 * #1245: Fix a regression in which the KeePassXC credential hook password prompt was invisible.
 * #1246: Fix a regression in which the ntfy monitoring hook failed to send a ping when the
   "priority" option was set.

2.1.0
 * TL;DR: Many logging, memory, and performance improvements. Mind those breaking changes!
 * #485: When running commands (database clients, command hooks, etc.), elevate stderr output to
   show up as borgmatic error logs.
 * #858: With the "--log-json" flag, log borgmatic's own logs as JSON, not just Borg's.
 * #1092: BREAKING: Treat most Borg warnings as errors by default, so for instance backups now fail
   when source directories are missing. You can still override this behavior with the
   "borg_exit_codes" option. See the documentation for more information:
   https://torsion.org/borgmatic/how-to/customize-warnings-and-errors/
 * #1092: Deprecate the "source_directories_must_exist" option, as borgmatic now treats "backup file
   not found" warnings from Borg as errors, which accomplishes the same thing.
 * #1132: BREAKING/SECURITY: For the Healthchecks, Apprise, Pagerduty, and Loki monitoring hooks,
   disable log sending when not explicitly enabled. This avoids revealing private log information to